[tool.poetry]
name = "brishgarden"
version = "0.1.0"
description = "BrishGarden uses Brish to serve an HTTP API that can execute interpreted code (that would otherwise need expensive startup costs) fast. It's also useful as a remote code executor."
authors = ["NightMachinary <rudiwillalwaysloveyou@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
python-multipart = "^0.0.5"
# brish = {git = "https://github.com/NightMachinary/brish.git"}
fastapi = {extras = ["all"], version = "^0.61.0"}
passlib = {extras = ["bcrypt", "argon2"], version = "^1.7.2"}
python-jose = {extras = ["cryptography"], version = "^3.1.0"}
brish = "^0.2.2"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
brishgarden = 'brishgarden:main'

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

